@@ -93,7 +93,8 @@ Release 0.19.0 - Unreleased
    HBASE-785   Remove InfoServer, use HADOOP-3824 StatusHttpServer 
                instead (requires hadoop 0.19)
    HBASE-81    When a scanner lease times out, throw a more "user friendly" exception
-       
+   HBASE-978   Remove BloomFilterDescriptor. It is no longer used.
+        
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
                (Andrzej Bialecki via Stack)
